--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                 <div class="card-image">
 
-                    <img src="/imagenes/corazon.webp" alt="">
+                    <img src="/imagenes/corazon.jfif" alt="">
         
                 </div>           
 
